freest/test/prog/Valid/SessionTypes/TypeInPat/TypeInPat.fst
module TypeInPat where

foo : (??(a : *T). Skip) -> Skip
foo (??a. s) = s