freest/test/prog/Invalid/SessionTypes/ReceivePatOnOutChannel/ReceivePatOnOutChannel.fst
module ReceiveOnOutChannelPat where

foo : !Int -> ()
foo (?@x. _) = ()